--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -14,8 +16,11 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^10.0.0",
+    "babel-register": "^6.26.0",
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -38,6 +43,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "ignore-styles": "^5.0.1",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
@@ -55,6 +61,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
+    "react-loadable": "^5.5.0",
     "react-refresh": "^0.8.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -77,7 +84,7 @@
     "frontend": "node src/frontend/scripts/start.js",
     "buildfrontend": "node src/frontend/scripts/build.js",
     "testfrontend": "node src/frontend/scripts/test.js",
-    "backend": "node -r esm src/backend/index.js"
+    "backend": "node -r esm src/backend/bootstrap.js"
   },
   "eslintConfig": {
     "extends": [
@@ -146,10 +153,5 @@
       "jest-watch-typeahead/testname"
     ],
     "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
   }
 }
